--- a/index.html
+++ b/index.html
@@ -19,12 +19,48 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
-	
+	<!-- Header -->
+	<header>
+		<!-- Navbar -->
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Brand</a>
+				</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#home"><i class="fa fa-home" aria-hidden="true"></i> Inicio <span class="sr-only">(current)</span></a></li>
+						<li><a href="#about"><i class="fa fa-id-card" aria-hidden="true"></i> Sobre mí</a></li>
+						<li><a href="#skills"><i class="fa fa-code" aria-hidden="true"></i> Habilidades</a></li>
+						<li><a href="#portfolio"><i class="fa fa-suitcase" aria-hidden="true"></i> Proyectos</a></li>
+						<li><a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i> Contacto</a></li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+
+
+
+		<!-- particles.js container -->
+		<div id="particles-js"></div>
+	</header>
 
 	<!-- jQuery -->
 	<script src="assets/js/jQuery/jquery-3.2.1.min.js"></script>
 	<!-- Bootstrap JS -->
 	<script src="assets/js/bootstrap.min.js"></script>
+	<!-- Particles -->
+	<script src="assets/js/particles/particles.min.js"></script>
+	<script src="assets/js/particles/app.js"></script>
+	<script src="assets/js/particles/lib/stats.js"></script>
 	<!-- main.js -->
 	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
