--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- Header -->
 	<header>
 		<!-- Navbar -->
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
@@ -32,7 +32,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Brand</a>
+					<!--<a class="navbar-brand" href="#">Paula Ponce</a>-->
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -46,11 +46,17 @@
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-
-
-
 		<!-- particles.js container -->
-		<div id="particles-js"></div>
+		<div id="particles-js">
+			<div id="home" class="container">
+				<div class="row">
+					<div class="col-lg-6 col-md-6 text-center nombre">
+						<h1>Paula Ponce Zúñiga</h1>
+						<h2>Front-End Web Developer</h2>						
+					</div>
+				</div>
+			</div>
+		</div>
 	</header>
 
 	<!-- jQuery -->
@@ -58,7 +64,7 @@
 	<!-- Bootstrap JS -->
 	<script src="assets/js/bootstrap.min.js"></script>
 	<!-- Particles -->
-	<script src="assets/js/particles/particles.min.js"></script>
+	<script src="assets/js/particles/particles.js"></script>
 	<script src="assets/js/particles/app.js"></script>
 	<script src="assets/js/particles/lib/stats.js"></script>
 	<!-- main.js -->
