about me section

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
+
+		<!-- Home Section -->
 		<!-- particles.js container -->
 		<div id="particles-js">
 			<div id="home" class="container">
 				<div class="row">
-					<div class="col-lg-6 col-md-6 text-center nombre">
+					<div class="col-lg-6 col-md-7 col-sm-9 col-xs-11 text-center nombre">
 						<h1>Paula Ponce Zúñiga</h1>
 						<h2>Front-End Web Developer</h2>						
 					</div>
@@ -58,6 +60,41 @@
 			</div>
 		</div>
 	</header>
+
+	<!-- About Section-->
+	<section id="about" class="container">
+		<div class="row">
+			<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 statement-container">
+				<div id="statement" class="row">
+					<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 text-center">
+						<h3 class="text-left">Sobre mí</h3>
+						<p class="text-justify">Hola, mi nombre es Paula Ponce, Desarrolladora Web Front-End. Con un interés en el mundo digital desde siempre, mi objetivo principal es llegar a ser una Desarroladora Web Full-Stack y contribuir al desarrollo tecnológico del país. Autodidacta, proactiva, organizada, responsable, son algunas de mis cualidades.</p>
+						<p class="text-justify">Me encanta la programación, aprender cosas nuevas y trabajar en equipo bajo la metodología Ágil.</p>
+					</div>
+				</div>
+				<div id="badges" class="row text-center">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+						<h4>Reconocimientos:</h4>
+						<div class="row">
+							<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<img src="http://capitan-dev.laboratoria.la/system/badges/4/normal/best_squad.png?1480431485" alt="">
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<img src="http://capitan-dev.laboratoria.la/system/badges/4/normal/best_squad.png?1480431485" alt="">
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<img src="http://capitan-dev.laboratoria.la/system/badges/4/normal/best_squad.png?1480431485" alt="">
+					</div>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-container">
+				<img src="http://capitan-dev.laboratoria.la/alumna.png" alt="" class="img-responsive img-circle">
+			</div>
+		</div>
+	</section>
 
 	<!-- jQuery -->
 	<script src="assets/js/jQuery/jquery-3.2.1.min.js"></script>
