--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<!-- Skills Section -->
 	<section id="skills" class="container">
 		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+			<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 text-center">
 				<h3>Habilidades</h3>
 				<div class="row devicon-container">
 					<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
@@ -118,44 +118,22 @@
 						<i class="devicon-gulp-plain"></i>
 					</div>
 				</div>
-				<div id="other-skills" class="row">
-					<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
-						<h4>Habilidades blandas</h4>
-						<ul class="list-group">
-							<li class="list-group-item"><i class="fa fa-graduation-cap" aria-hidden="true"></i></li>
-							<li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i></li>
-							<li class="list-group-item"><i class="fa fa-rocket" aria-hidden="true"></i></li>
-							<li class="list-group-item"><i class="fa fa-users" aria-hidden="true"></i></li>
-						</ul>
-					</div>
-				</div>
+				
 			</div>
+			
+			<!--<div id="other-skills">
+				<div id="other skills" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+					<h4 class="text-left">Habilidades blandas</h4>
+					<ul class="list-group">
+						<li class="list-group-item"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Autodidacta</li>
+						<li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i> Organizada</li>
+						<li class="list-group-item"><i class="fa fa-rocket" aria-hidden="true"></i> Proactiva</li>
+						<li class="list-group-item"><i class="fa fa-users" aria-hidden="true"></i> Trabajo en equipo</li>
+					</ul>
+				</div>
+			</div>-->
 		</div>
 	</section>
-
-<!--
-Maquetación: HTML5 / CSS3
-Lenguajes de programación: Javascript / Visual Basic
-Librerías javascript: jQuery
-Frameworks CSS-JS: Bootstrap / Materialize
-Preprocesadores CSS: SASS
-Control de versiones: Git / Github
-Automatizador de tareas: Gulp
-Diseño adaptativo (Responsive)
-APIs
-
-<i class="devicon-html5-plain"></i>
-<i class="devicon-css3-plain"></i>
-<i class="devicon-javascript-plain"></i>
-
-<i class="devicon-jquery-plain"></i>
-<i class="devicon-bootstrap-plain"></i>
-<i class="devicon-sass-original"></i>
-
-<i class="devicon-git-plain"></i>
-<i class="devicon-github-plain"></i>
-<i class="devicon-gulp-plain"></i>
--->
 
 	<!-- jQuery -->
 	<script src="assets/js/jQuery/jquery-3.2.1.min.js"></script>
