--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<h4>Reconocimientos:</h4>
 						<div class="row">
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-								<img src="assets/img/mejor-squad.png" alt="">
+							<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-xs-3">
+								<img src="assets/img/mejor-squad.png" alt="" class="img-responsive text-center">
 							</div>
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-								<img src="assets/img/proactiva.png" alt="">
+							<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+								<img src="assets/img/proactiva.png" alt="" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -95,7 +95,7 @@
 	<!-- Skills Section -->
 	<section id="skills" class="container">
 		<div class="row">
-			<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 text-center">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
 				<h3>Habilidades</h3>
 				<div class="row devicon-container">
 					<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
@@ -132,6 +132,97 @@
 					</ul>
 				</div>
 			</div>-->
+		</div>
+	</section>
+
+	<!-- Portfolio Section -->
+	<section id="portfolio" class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h3 class="text-center">Proyectos</h3>
+				<div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<div class="thumbnail">
+							<img src="assets/img/pokedex.JPG" alt="..." class="img-responsive">
+							<div class="caption">
+								<h5>Pokedex</h5>
+								<p>Pokémon API, AJAX, jQuery, Materialize</p>
+								<p>
+									<a href="https://github.com/PaulaPonce/pokedex" class="btn btn-primary" role="button">Code</a>
+									<a href="https://paulaponce.github.io/pokedex/" class="btn btn-primary" role="button">Demo</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<div class="thumbnail">
+							<img src="assets/img/photolab.JPG" alt="..." class="img-responsive">
+							<div class="caption">
+								<h5>PhotoLab</h5>
+								<p>Gulp, SASS, Materialize</p>
+								<p>
+									<a href="https://github.com/PaulaPonce/photolab" class="btn btn-primary" role="button">Code</a> 
+									<a href="https://paulaponce.github.io/photolab/" class="btn btn-primary" role="button">Demo</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<div class="thumbnail">
+							<img src="assets/img/portafolio-sass.JPG" alt="..." class="img-responsive">
+							<div class="caption">
+								<h5>Portafolio</h5>
+								<p>jQuery, SASS, Bootstrap</p>
+								<p>
+									<a href="https://github.com/PaulaPonce/portafolio-sass" class="btn btn-primary" role="button">Code</a>
+									<a href="https://paulaponce.github.io/portafolio-sass/" class="btn btn-primary" role="button">Demo</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<div class="thumbnail">
+							<img src="assets/img/trans-lab.JPG" alt="..." class="img-responsive">
+							<div class="caption">
+								<h5>TransLab</h5>
+								<p>bip! API Rest, jQuery, Materialize, Mobile First</p>
+								<p>
+									<a href="https://github.com/PaulaPonce/trans-lab" class="btn btn-primary" role="button">Code</a>
+									<a href="https://paulaponce.github.io/trans-lab/" class="btn btn-primary" role="button">Demo</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<div class="thumbnail">
+							<img src="assets/img/lyft-flexbox.JPG" alt="..." class="img-responsive">
+							<div class="caption">
+								<h5>LabCar</h5>
+								<p>Flexbox layout</p>
+								<p>
+									<a href="https://github.com/PaulaPonce/lyft-flexbox" class="btn btn-primary" role="button">Code</a>
+									<a href="https://paulaponce.github.io/lyft-flexbox/" class="btn btn-primary" role="button">Demo</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<div class="thumbnail">
+							<img src="assets/img/game-planet.JPG" alt="..." class="img-responsive">
+							<div class="caption">
+								<h5>Game Planet</h5>
+								<p>Bootstrap, team work</p>
+								<p>
+									<a href="https://github.com/PaulaPonce/game-planet" class="btn btn-primary" role="button">Code</a>
+									<a href="https://paulaponce.github.io/game-planet/" class="btn btn-primary" role="button">Demo</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
