contact section and footer

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 	<!-- About Section-->
 	<section id="about" class="container">
 		<div class="row">
-			<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 statement-container">
+			<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 statement-container">
 				<div id="statement" class="row">
 					<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 text-center">
 						<h3 class="text-left">Sobre mí</h3>
-						<p class="text-justify">Hola, mi nombre es Paula Ponce, Desarrolladora Web Front-End. Con un interés en el mundo digital desde siempre, mi objetivo principal es llegar a ser una Desarroladora Web Full-Stack y contribuir al desarrollo tecnológico del país. Autodidacta, proactiva, organizada, responsable, son algunas de mis cualidades.</p>
-						<p class="text-justify">Me encanta la programación, aprender cosas nuevas y trabajar en equipo bajo la metodología Ágil.</p>
+						<p class="text-justify">Hola, mi nombre es Paula Ponce y soy Desarrolladora Web Front-End. Con una gran motivación por aprender y para el trabajo en equipo, mi objetivo principal es llegar a ser una Desarrolladora Web Full-Stack.</p>
+						<p class="text-justify">Autodidacta, proactiva, organizada, responsable, son algunas de mis cualidades.</p>
 					</div>
 				</div>
 				<div id="badges" class="row text-center">
@@ -225,6 +225,40 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Contact Section -->
+	<section id="contact" class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h3>Contacto</h3>
+				<div class="row">
+					<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+						<p>Si te gustaron mis proyectos o tienes alguna duda, puedes contactarme por correo o a través de mis perfiles de linkedin o twitter.</p>
+						<p>Puedes revisar el resto de mis proyectos en mi perfil de Github ;)</p>
+						<p class="text-center"><i class="fa fa-envelope" aria-hidden="true"></i> <b>paula.ponce.zuniga@gmail.com</b></p>
+					</div>
+					<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+						<ul class="list-group">
+							<li class="list-group-item"><a href="https://github.com/PaulaPonce"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+							<li class="list-group-item"><a href="https://www.linkedin.com/in/paula-ponce-z%C3%BA%C3%B1iga-219a90145/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+							<li class="list-group-item"><a href="https://twitter.com/Paula_PonceZ"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<p class="text-center">Desarrollado por Paula Ponce</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<!-- jQuery -->
 	<script src="assets/js/jQuery/jquery-3.2.1.min.js"></script>
