--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 	<!-- Devicon -->
 	<link rel="stylesheet" href="assets/fonts/devicon-master/devicon.min.css">
 	<!-- Fonts -->
-
+	<link href="https://fonts.googleapis.com/css?family=Play|Press+Start+2P|Share+Tech+Mono" rel="stylesheet">
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="assets/css/animate.css">
 	<!-- main.css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 	<!-- Header -->
 	<header>
 		<!-- Navbar -->
@@ -53,8 +55,8 @@
 			<div id="home" class="container">
 				<div class="row">
 					<div class="col-lg-6 col-md-7 col-sm-9 col-xs-11 text-center nombre">
-						<h1>Paula Ponce Zúñiga</h1>
-						<h2>Front-End Web Developer</h2>						
+						<h1 class="animated fadeInDown">Paula Ponce Zúñiga</h1>
+						<h2 class="animated fadeInRight">Front-End Web Developer</h2>						
 					</div>
 				</div>
 			</div>
@@ -67,7 +69,7 @@
 			<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 statement-container">
 				<div id="statement" class="row">
 					<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 text-center">
-						<h3 class="text-left">Sobre mí</h3>
+						<h3 class="text-left animation-element">Sobre mí</h3>
 						<p class="text-justify">Hola, mi nombre es Paula Ponce y soy Desarrolladora Web Front-End. Con una gran motivación por aprender y para el trabajo en equipo, mi objetivo principal es llegar a ser una Desarrolladora Web Full-Stack.</p>
 						<p class="text-justify">Autodidacta, proactiva, organizada, responsable, son algunas de mis cualidades.</p>
 					</div>
@@ -77,10 +79,10 @@
 						<h4>Reconocimientos:</h4>
 						<div class="row">
 							<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-xs-3">
-								<img src="assets/img/mejor-squad.png" alt="" class="img-responsive text-center">
+								<img src="assets/img/mejor-squad.png" alt="" class="img-responsive text-center animation-image">
 							</div>
 							<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-								<img src="assets/img/proactiva.png" alt="" class="img-responsive">
+								<img src="assets/img/proactiva.png" alt="" class="img-responsive animation-image">
 							</div>
 						</div>
 					</div>
@@ -96,7 +98,7 @@
 	<section id="skills" class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-				<h3>Habilidades</h3>
+				<h3 class="animation-element">Habilidades</h3>
 				<div class="row devicon-container">
 					<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
 						<i class="devicon-html5-plain"></i>
@@ -139,7 +141,7 @@
 	<section id="portfolio" class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3 class="text-center">Proyectos</h3>
+				<h3 class="text-center animation-element">Proyectos</h3>
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<div class="thumbnail">
@@ -230,7 +232,7 @@
 	<section id="contact" class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3>Contacto</h3>
+				<h3 class="animation-element">Contacto</h3>
 				<div class="row">
 					<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 						<p>Si te gustaron mis proyectos o tienes alguna duda, puedes contactarme por correo o a través de mis perfiles de linkedin o twitter.</p>
