--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-7 col-sm-9 col-xs-11 text-center nombre">
 						<h1 class="animated fadeInDown">Paula Ponce Zúñiga</h1>
-						<h2 class="animated fadeInRight">Front-End Web Developer</h2>						
+						<h2 class="animated fadeInRight">Front-End Web Developer</h2>
 					</div>
 				</div>
 			</div>
@@ -64,187 +64,195 @@
 	</header>
 
 	<!-- About Section-->
-	<section id="about" class="container">
-		<div class="row">
-			<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 statement-container">
-				<div id="statement" class="row">
-					<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-12 col-xs-12 text-center">
-						<h3 class="text-left animation-element">Sobre mí</h3>
-						<p class="text-justify">Hola, mi nombre es Paula Ponce y soy Desarrolladora Web Front-End. Con una gran motivación por aprender y para el trabajo en equipo, mi objetivo principal es llegar a ser una Desarrolladora Web Full-Stack.</p>
-						<p class="text-justify">Autodidacta, proactiva, organizada, responsable, son algunas de mis cualidades.</p>
+	<section id="about">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 statement-container">
+					<div id="statement" class="row">
+						<div class="col-lg-11 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-xs-12 text-center">
+							<h3 class="text-left animation-element">Sobre mí</h3>
+							<p class="text-left">Hola, mi nombre es Paula Ponce y soy Desarrolladora Web Front-End. Con una gran motivación por aprender y para el trabajo en equipo, mi objetivo principal es llegar a ser una Desarrolladora Web Full-Stack.</p>
+							<p class="text-left">Autodidacta, proactiva, organizada, responsable, son algunas de mis cualidades.</p>
+						</div>
 					</div>
-				</div>
-				<div id="badges" class="row text-center">
-					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						<h4>Reconocimientos:</h4>
-						<div class="row">
-							<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-xs-3">
-								<img src="assets/img/mejor-squad.png" alt="" class="img-responsive text-center animation-image">
-							</div>
-							<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-								<img src="assets/img/proactiva.png" alt="" class="img-responsive animation-image">
+					<div id="badges" class="row text-center">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h4>Reconocimientos:</h4>
+							<div class="row">
+								<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-xs-3">
+									<img src="assets/img/mejor-squad.png" alt="" class="img-responsive animation-image">
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+									<img src="assets/img/proactiva.png" alt="" class="img-responsive animation-image">
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-container">
-				<img src="http://capitan-dev.laboratoria.la/alumna.png" alt="" class="img-responsive img-circle">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-container">
+					<img src="http://capitan-dev.laboratoria.la/alumna.png" alt="" class="img-responsive img-circle">
+				</div>
 			</div>
 		</div>
 	</section>
 
 	<!-- Skills Section -->
-	<section id="skills" class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-				<h3 class="animation-element">Habilidades</h3>
-				<div class="row devicon-container">
-					<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
-						<i class="devicon-html5-plain"></i>
-						<i class="devicon-css3-plain"></i>
-						<i class="devicon-javascript-plain"></i>
+	<section id="skills">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+					<h3 class="animation-element">Habilidades</h3>
+					<div class="row devicon-container">
+						<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+							<i class="devicon-html5-plain"></i>
+							<i class="devicon-css3-plain"></i>
+							<i class="devicon-javascript-plain"></i>
+						</div>
 					</div>
-				</div>
-				<div class="row devicon-container">
-					<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
-						<i class="devicon-jquery-plain"></i>
-						<i class="devicon-bootstrap-plain"></i>
-						<i class="devicon-sass-original"></i>
+					<div class="row devicon-container">
+						<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+							<i class="devicon-jquery-plain"></i>
+							<i class="devicon-bootstrap-plain"></i>
+							<i class="devicon-sass-original"></i>
+						</div>
 					</div>
-				</div>
-				<div class="row devicon-container">
-					<div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
-						<i class="devicon-git-plain"></i>
-						<i class="devicon-github-plain"></i>
-						<i class="devicon-gulp-plain"></i>
+					<div class="row devicon-container">
+						<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+							<i class="devicon-git-plain"></i>
+							<i class="devicon-github-plain"></i>
+							<i class="devicon-gulp-plain"></i>
+						</div>
 					</div>
+					
 				</div>
 				
+				<!--<div id="other-skills">
+					<div id="other skills" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+						<h4 class="text-left">Habilidades blandas</h4>
+						<ul class="list-group">
+							<li class="list-group-item"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Autodidacta</li>
+							<li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i> Organizada</li>
+							<li class="list-group-item"><i class="fa fa-rocket" aria-hidden="true"></i> Proactiva</li>
+							<li class="list-group-item"><i class="fa fa-users" aria-hidden="true"></i> Trabajo en equipo</li>
+						</ul>
+					</div>
+				</div>-->
 			</div>
-			
-			<!--<div id="other-skills">
-				<div id="other skills" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-					<h4 class="text-left">Habilidades blandas</h4>
-					<ul class="list-group">
-						<li class="list-group-item"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Autodidacta</li>
-						<li class="list-group-item"><i class="fa fa-calendar" aria-hidden="true"></i> Organizada</li>
-						<li class="list-group-item"><i class="fa fa-rocket" aria-hidden="true"></i> Proactiva</li>
-						<li class="list-group-item"><i class="fa fa-users" aria-hidden="true"></i> Trabajo en equipo</li>
-					</ul>
-				</div>
-			</div>-->
 		</div>
 	</section>
 
 	<!-- Portfolio Section -->
-	<section id="portfolio" class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3 class="text-center animation-element">Proyectos</h3>
-				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="thumbnail">
-							<img src="assets/img/pokedex.JPG" alt="..." class="img-responsive">
-							<div class="caption">
-								<h5>Pokedex</h5>
-								<p>Pokémon API, AJAX, jQuery, Materialize</p>
-								<p>
-									<a href="https://github.com/PaulaPonce/pokedex" class="btn btn-primary" role="button">Code</a>
-									<a href="https://paulaponce.github.io/pokedex/" class="btn btn-primary" role="button">Demo</a>
-								</p>
+	<section id="portfolio">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h3 class="text-center animation-element">Proyectos</h3>
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<img src="assets/img/pokedex.JPG" alt="..." class="img-responsive">
+								<div class="caption">
+									<h5>Pokedex</h5>
+									<p>Pokémon API, AJAX, jQuery, Materialize</p>
+									<p>
+										<a href="https://github.com/PaulaPonce/pokedex" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/pokedex/" class="btn btn-primary" role="button">Demo</a>
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<img src="assets/img/photolab.JPG" alt="..." class="img-responsive">
+								<div class="caption">
+									<h5>PhotoLab</h5>
+									<p>Gulp, SASS, Materialize</p>
+									<p>
+										<a href="https://github.com/PaulaPonce/photolab" class="btn btn-primary" role="button">Code</a> 
+										<a href="https://paulaponce.github.io/photolab/" class="btn btn-primary" role="button">Demo</a>
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<img src="assets/img/portafolio-sass.JPG" alt="..." class="img-responsive">
+								<div class="caption">
+									<h5>Portafolio</h5>
+									<p>jQuery, SASS, Bootstrap</p>
+									<p>
+										<a href="https://github.com/PaulaPonce/portafolio-sass" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/portafolio-sass/" class="btn btn-primary" role="button">Demo</a>
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="thumbnail">
-							<img src="assets/img/photolab.JPG" alt="..." class="img-responsive">
-							<div class="caption">
-								<h5>PhotoLab</h5>
-								<p>Gulp, SASS, Materialize</p>
-								<p>
-									<a href="https://github.com/PaulaPonce/photolab" class="btn btn-primary" role="button">Code</a> 
-									<a href="https://paulaponce.github.io/photolab/" class="btn btn-primary" role="button">Demo</a>
-								</p>
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<img src="assets/img/trans-lab.JPG" alt="..." class="img-responsive">
+								<div class="caption">
+									<h5>TransLab</h5>
+									<p>bip! API Rest, jQuery, Materialize, Mobile First</p>
+									<p>
+										<a href="https://github.com/PaulaPonce/trans-lab" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/trans-lab/" class="btn btn-primary" role="button">Demo</a>
+									</p>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="thumbnail">
-							<img src="assets/img/portafolio-sass.JPG" alt="..." class="img-responsive">
-							<div class="caption">
-								<h5>Portafolio</h5>
-								<p>jQuery, SASS, Bootstrap</p>
-								<p>
-									<a href="https://github.com/PaulaPonce/portafolio-sass" class="btn btn-primary" role="button">Code</a>
-									<a href="https://paulaponce.github.io/portafolio-sass/" class="btn btn-primary" role="button">Demo</a>
-								</p>
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<img src="assets/img/lyft-flexbox.JPG" alt="..." class="img-responsive">
+								<div class="caption">
+									<h5>LabCar</h5>
+									<p>Flexbox layout</p>
+									<p>
+										<a href="https://github.com/PaulaPonce/lyft-flexbox" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/lyft-flexbox/" class="btn btn-primary" role="button">Demo</a>
+									</p>
+								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="thumbnail">
-							<img src="assets/img/trans-lab.JPG" alt="..." class="img-responsive">
-							<div class="caption">
-								<h5>TransLab</h5>
-								<p>bip! API Rest, jQuery, Materialize, Mobile First</p>
-								<p>
-									<a href="https://github.com/PaulaPonce/trans-lab" class="btn btn-primary" role="button">Code</a>
-									<a href="https://paulaponce.github.io/trans-lab/" class="btn btn-primary" role="button">Demo</a>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="thumbnail">
-							<img src="assets/img/lyft-flexbox.JPG" alt="..." class="img-responsive">
-							<div class="caption">
-								<h5>LabCar</h5>
-								<p>Flexbox layout</p>
-								<p>
-									<a href="https://github.com/PaulaPonce/lyft-flexbox" class="btn btn-primary" role="button">Code</a>
-									<a href="https://paulaponce.github.io/lyft-flexbox/" class="btn btn-primary" role="button">Demo</a>
-								</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						<div class="thumbnail">
-							<img src="assets/img/game-planet.JPG" alt="..." class="img-responsive">
-							<div class="caption">
-								<h5>Game Planet</h5>
-								<p>Bootstrap, team work</p>
-								<p>
-									<a href="https://github.com/PaulaPonce/game-planet" class="btn btn-primary" role="button">Code</a>
-									<a href="https://paulaponce.github.io/game-planet/" class="btn btn-primary" role="button">Demo</a>
-								</p>
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<img src="assets/img/game-planet.JPG" alt="..." class="img-responsive">
+								<div class="caption">
+									<h5>Game Planet</h5>
+									<p>Bootstrap, team work</p>
+									<p>
+										<a href="https://github.com/PaulaPonce/game-planet" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/game-planet/" class="btn btn-primary" role="button">Demo</a>
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>	
 	</section>
 
 	<!-- Contact Section -->
-	<section id="contact" class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3 class="animation-element">Contacto</h3>
-				<div class="row">
-					<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
-						<p>Si te gustaron mis proyectos o tienes alguna duda, puedes contactarme por correo o a través de mis perfiles de linkedin o twitter.</p>
-						<p>Puedes revisar el resto de mis proyectos en mi perfil de Github ;)</p>
-						<p class="text-center"><i class="fa fa-envelope" aria-hidden="true"></i> <b>paula.ponce.zuniga@gmail.com</b></p>
-					</div>
-					<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-						<ul class="list-group">
-							<li class="list-group-item"><a href="https://github.com/PaulaPonce"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-							<li class="list-group-item"><a href="https://www.linkedin.com/in/paula-ponce-z%C3%BA%C3%B1iga-219a90145/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-							<li class="list-group-item"><a href="https://twitter.com/Paula_PonceZ"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-						</ul>
+	<section id="contact">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h3 class="animation-element">Contacto</h3>
+					<div class="row">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+							<p>Si te gustaron mis proyectos o tienes alguna duda, puedes contactarme por correo o a través de mis perfiles de linkedin o twitter.</p>
+							<p>Puedes revisar el resto de mis proyectos en mi perfil de Github ;)</p>
+							<p class="text-center"><i class="fa fa-envelope" aria-hidden="true"></i> <b>paula.ponce.zuniga@gmail.com</b></p>
+						</div>
+						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+							<ul class="list-group">
+								<li class="list-group-item"><a href="https://github.com/PaulaPonce"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+								<li class="list-group-item"><a href="https://www.linkedin.com/in/paula-ponce-z%C3%BA%C3%B1iga-219a90145/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+								<li class="list-group-item"><a href="https://twitter.com/Paula_PonceZ"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
