--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Play|Press+Start+2P|Share+Tech+Mono" rel="stylesheet">
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="assets/css/animate.css">
+	<!-- Animatism.css -->
+	<link rel="stylesheet" href="assets/css/animatism.css">
 	<!-- main.css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
@@ -64,36 +66,40 @@
 	</header>
 
 	<!-- About Section-->
-	<section id="about">
+	<section id="about" class="shadow">
+	
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 statement-container">
 					<div id="statement" class="row">
 						<div class="col-lg-11 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-xs-12 text-center">
-							<h3 class="text-left animation-element">Sobre mí</h3>
+							<h3 class="text-left animation-zoom">Sobre mí</h3>
+							<div class="animation-zoom">
 							<p class="text-left">Hola, mi nombre es Paula Ponce y soy Desarrolladora Web Front-End. Con una gran motivación por aprender y para el trabajo en equipo, mi objetivo principal es llegar a ser una Desarrolladora Web Full-Stack.</p>
 							<p class="text-left">Autodidacta, proactiva, organizada, responsable, son algunas de mis cualidades.</p>
+							</div>
 						</div>
 					</div>
 					<div id="badges" class="row text-center">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Reconocimientos:</h4>
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animation-zoom">
+							<h4><b>Reconocimientos:</b></h4>
 							<div class="row">
 								<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-xs-3">
-									<img src="assets/img/mejor-squad.png" alt="" class="img-responsive animation-image">
+									<img src="assets/img/mejor-squad.png" alt="" class="img-responsive">
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-									<img src="assets/img/proactiva.png" alt="" class="img-responsive animation-image">
+									<img src="assets/img/proactiva.png" alt="" class="img-responsive">
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-container">
-					<img src="http://capitan-dev.laboratoria.la/alumna.png" alt="" class="img-responsive img-circle">
+					<img src="http://capitan-dev.laboratoria.la/alumna.png" alt="" class="img-responsive img-circle animation-zoom">
 				</div>
 			</div>
 		</div>
+
 	</section>
 
 	<!-- Skills Section -->
@@ -101,26 +107,33 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-					<h3 class="animation-element">Habilidades</h3>
+					<h3 class="animation-title">Habilidades</h3>
 					<div class="row devicon-container">
 						<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
-							<i class="devicon-html5-plain"></i>
-							<i class="devicon-css3-plain"></i>
-							<i class="devicon-javascript-plain"></i>
+							<ul class="list-group animation-slide">
+								<li class="list-group-item grow"><i class="devicon-html5-plain-wordmark"></i></li>
+								<li class="list-group-item grow"><i class="devicon-css3-plain-wordmark"></i></li>
+								<li class="list-group-item grow"><i class="devicon-javascript-plain"></i></li>
+							</ul>
+							
 						</div>
 					</div>
 					<div class="row devicon-container">
 						<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
-							<i class="devicon-jquery-plain"></i>
-							<i class="devicon-bootstrap-plain"></i>
-							<i class="devicon-sass-original"></i>
+							<ul class="list-group animation-slide">
+								<li class="list-group-item grow"><i class="devicon-jquery-plain-wordmark"></i></li>
+								<li class="list-group-item grow"><i class="devicon-bootstrap-plain-wordmark"></i></li>
+								<li class="list-group-item grow"><i class="devicon-sass-original"></i></li>
+							</ul>
 						</div>
 					</div>
 					<div class="row devicon-container">
 						<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
-							<i class="devicon-git-plain"></i>
-							<i class="devicon-github-plain"></i>
-							<i class="devicon-gulp-plain"></i>
+							<ul class="list-group animation-slide">
+								<li class="list-group-item grow"><i class="devicon-git-plain-wordmark"></i></li>
+								<li class="list-group-item grow"><i class="devicon-github-plain-wordmark"></i></li>
+								<li class="list-group-item grow"><i class="devicon-gulp-plain"></i></li>
+							</ul>
 						</div>
 					</div>
 					
@@ -146,9 +159,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h3 class="text-center animation-element">Proyectos</h3>
+					<h3 class="text-center animation-title">Proyectos</h3>
 					<div class="row">
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<div class="dtl27">
+									<img src="assets/img/pokedex.JPG" alt="Pokedex" class="img-responsive rounded">
+									<div class="dtl">
+										<h3>Pokedex</h3>
+										<p>Pokémon API, AJAX, jQuery, Materialize</p>
+										<a href="https://github.com/PaulaPonce/pokedex" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/pokedex/" class="btn btn-primary" role="button">Demo</a>
+									</div>
+								</div>
+							</div>
+							<!--
 							<div class="thumbnail">
 								<img src="assets/img/pokedex.JPG" alt="..." class="img-responsive">
 								<div class="caption">
@@ -160,8 +185,21 @@
 									</p>
 								</div>
 							</div>
+							-->
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<div class="dtl27">
+									<img src="assets/img/photolab.JPG" alt="PhotoLab" class="img-responsive rounded">
+									<div class="dtl">
+										<h3>PhotoLab</h3>
+										<p>Gulp, SASS, Materialize</p>
+										<a href="https://github.com/PaulaPonce/photolab" class="btn btn-primary" role="button">Code</a> 
+										<a href="https://paulaponce.github.io/photolab/" class="btn btn-primary" role="button">Demo</a>
+									</div>
+								</div>
+							</div>
+							<!--
 							<div class="thumbnail">
 								<img src="assets/img/photolab.JPG" alt="..." class="img-responsive">
 								<div class="caption">
@@ -173,8 +211,21 @@
 									</p>
 								</div>
 							</div>
+							-->
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<div class="dtl27">
+									<img src="assets/img/portafolio-sass.JPG" alt="Portafolio" class="img-responsive rounded">
+									<div class="dtl">
+										<h3>Portafolio</h3>
+										<p>jQuery, SASS, Bootstrap</p>
+										<a href="https://github.com/PaulaPonce/portafolio-sass" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/portafolio-sass/" class="btn btn-primary" role="button">Demo</a>
+									</div>
+								</div>
+							</div>
+							<!--
 							<div class="thumbnail">
 								<img src="assets/img/portafolio-sass.JPG" alt="..." class="img-responsive">
 								<div class="caption">
@@ -186,10 +237,23 @@
 									</p>
 								</div>
 							</div>
+							-->
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<div class="dtl27">
+									<img src="assets/img/trans-lab.JPG" alt="TransLab" class="img-responsive rounded">
+									<div class="dtl">
+										<h3>TransLab</h3>
+										<p>bip! API Rest, jQuery, Materialize, Mobile First</p>
+										<a href="https://github.com/PaulaPonce/trans-lab" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/trans-lab/" class="btn btn-primary" role="button">Demo</a>
+									</div>
+								</div>
+							</div>
+							<!--
 							<div class="thumbnail">
 								<img src="assets/img/trans-lab.JPG" alt="..." class="img-responsive">
 								<div class="caption">
@@ -201,8 +265,21 @@
 									</p>
 								</div>
 							</div>
+							-->
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<div class="dtl27">
+									<img src="assets/img/lyft-flexbox.JPG" alt="Lyft" class="img-responsive rounded">
+									<div class="dtl">
+										<h3>Lyft</h3>
+										<p>Flexbox layout</p>
+										<a href="https://github.com/PaulaPonce/lyft-flexbox" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/lyft-flexbox/" class="btn btn-primary" role="button">Demo</a>
+									</div>
+								</div>
+							</div>
+							<!--
 							<div class="thumbnail">
 								<img src="assets/img/lyft-flexbox.JPG" alt="..." class="img-responsive">
 								<div class="caption">
@@ -214,8 +291,21 @@
 									</p>
 								</div>
 							</div>
+							-->
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div class="thumbnail">
+								<div class="dtl27">
+									<img src="assets/img/game-planet.JPG" alt="Game Planet" class="img-responsive rounded">
+									<div class="dtl">
+										<h3>Game Planet</h3>
+										<p>Bootstrap, team work</p>
+										<a href="https://github.com/PaulaPonce/game-planet" class="btn btn-primary" role="button">Code</a>
+										<a href="https://paulaponce.github.io/game-planet/" class="btn btn-primary" role="button">Demo</a>
+									</div>
+								</div>
+							</div>
+							<!--
 							<div class="thumbnail">
 								<img src="assets/img/game-planet.JPG" alt="..." class="img-responsive">
 								<div class="caption">
@@ -227,6 +317,7 @@
 									</p>
 								</div>
 							</div>
+							-->
 						</div>
 					</div>
 				</div>
@@ -239,18 +330,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h3 class="animation-element">Contacto</h3>
+					<h3 class="animation-title">Contacto</h3>
 					<div class="row">
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 							<p>Si te gustaron mis proyectos o tienes alguna duda, puedes contactarme por correo o a través de mis perfiles de linkedin o twitter.</p>
-							<p>Puedes revisar el resto de mis proyectos en mi perfil de Github ;)</p>
+							<p>Puedes revisar otros proyectos en mi perfil de Github ;)</p>
 							<p class="text-center"><i class="fa fa-envelope" aria-hidden="true"></i> <b>paula.ponce.zuniga@gmail.com</b></p>
 						</div>
 						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
 							<ul class="list-group">
-								<li class="list-group-item"><a href="https://github.com/PaulaPonce"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-								<li class="list-group-item"><a href="https://www.linkedin.com/in/paula-ponce-z%C3%BA%C3%B1iga-219a90145/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-								<li class="list-group-item"><a href="https://twitter.com/Paula_PonceZ"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+								<li class="list-group-item"><a href="https://github.com/PaulaPonce"><i class="fa fa-github-square grow" aria-hidden="true"></i></a></li>
+								<li class="list-group-item"><a href="https://www.linkedin.com/in/paula-ponce-z%C3%BA%C3%B1iga-219a90145/"><i class="fa fa-linkedin-square grow" aria-hidden="true"></i></a></li>
+								<li class="list-group-item"><a href="https://twitter.com/Paula_PonceZ"><i class="fa fa-twitter-square grow" aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -264,7 +355,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<p class="text-center">Desarrollado por Paula Ponce</p>
+					<p class="text-center">Desarrollado por <a href="https://github.com/PaulaPonce">Paula Ponce</a></p>
 				</div>
 			</div>
 		</div>
