--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4><b>Reconocimientos:</b></h4>
 							<div class="row">
-								<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-xs-3">
+								<div class="col-lg-3 col-lg-offset-3 col-md-3 col-md-offset-3 col-sm-3 col-sm-offset-3 col-xs-6">
 									<img src="assets/img/mejor-squad.png" alt="Mejor Squad Badge" class="img-responsive">
 								</div>
-								<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+								<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
 									<img src="assets/img/proactiva.png" alt="Proactiva Badge" class="img-responsive">
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-container">
+				<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 img-container">
 					<img src="assets/img/SCL20171160.JPG" alt="Paula Ponce" class="img-responsive img-circle animation-zoom">
 				</div>
 			</div>
@@ -275,7 +275,7 @@
 							<p>Puedes revisar otros proyectos en mi perfil de Github ;)</p>
 							<p class="text-center"><i class="fa fa-envelope" aria-hidden="true"></i> <b>paula.ponce.zuniga@gmail.com</b></p>
 						</div>
-						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 text-center">
 							<ul class="list-group">
 								<li class="list-group-item">
 									<a href="https://github.com/PaulaPonce" target="_blank">
